Got beginnings of header working, stared cpp template
Basic mapping of lua property types to C++ types also
happens now.

--- a/templates/cpp_class.cpp.j2
+++ b/templates/cpp_class.cpp.j2
@@ -7,3 +7,14 @@ extern "C" {
     #include <lualib.h>
 }
 
+#include "{{class_spec.cpp_name}}.h"
+
+{{class_spec.cpp_name}}::{{class_spec.cpp_name}}() {}
+{{class_spec.cpp_name}}::~{{class_spec.cpp_name}}() {}
+
+extern "C" {
+    #include <lauxlib.h>
+    #include <lua.h>
+    #include <lualib.h>
+}
+
