--- a/templates/example.cpp.j2
+++ b/templates/example.cpp.j2
@@ -12,15 +12,20 @@ int main() {
     luaL_openlibs(L);
 
     std::cout << "Displaying defaults loaded from YAML template in constructor:" << std::endl;
-
     {% for prop in class_spec.properties -%}
     std::cout << "{{ "%-20s"| format(prop.name)}}: " << {{class_spec.cpp_name | lower}}.{{ prop.name }} << std::endl;
     {% endfor %}
 
     {{class_spec.cpp_name | lower}}.loadFromLuaScript(L, exampleLuaPath.c_str());
 
+    std::cout << "Displaying class values after load from Lua:" << std::endl;
+    {% for prop in class_spec.properties -%}
+    std::cout << "{{ "%-20s"| format(prop.name)}}: " << {{class_spec.cpp_name | lower}}.{{ prop.name }} << std::endl;
+    {% endfor %}
+
     std::cout << "Example program finished." << std::endl;
 
+    // basic cleanup
     lua_close(L);
     return 0;
 }
